[package]
name = "hcman"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive ="1.0"
dotenv = "0.15"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
egui = "0.28.1"
eframe = "0.28.1"
