[package]
name = "hcrelay"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_derive ="1.0"
dotenv = "0.15"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11.0"
oauth1 = "1.0.0"
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"
